[package]
name = "slates"
version = "0.0.0"
description = "Free desktop translate app"
authors = ["Lafif Astahdziq"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-always-on-top", "global-shortcut-all", "macos-private-api", "window-unminimize", "window-hide", "window-unmaximize", "window-minimize", "window-close", "window-maximize", "window-show", "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] } # system tray
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
